--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,24 +1,30 @@
 body {
   background-color: #101010;
 }
-.app__header {
-  margin-top: 0px;
+.section__padding {
+  padding-top: 60px;
+
 }
-.app__header-h1 {
+.app__header {
+  margin: 0px 0px 0px 100px ;
+
+}
+h1 {
+  font-family: "Cormorant Upright", serif;
   color: #ffac1e;
   letter-spacing: 0.04ems;
-  text-transform: uppercase;
+  text-transform: capitalize;
   line-height: 117px;
   font-size: 90px;
   font-weight: 400;
 }
-.app__wrapper_info p{
-line-height: 30px;
+
+.app__wrapper_info p {
+  line-height: 30px;
 }
-.app__wrapper img {
+.app__wrapper .Steak {
   width: fit-content;
-  height: 75%;
- 
+  height: 65%;
 
   --b: 8px; /* border thickness*/
   --s: 60px; /* size of the corner*/
@@ -43,7 +49,7 @@ line-height: 30px;
   transition: background-position 0.3s var(--_i, 0.3s),
     background-size 0.3s calc(0.3s - var(--_i, 0.3s));
 }
-img:hover {
+.app__wrapper .Steak:hover {
   background-size: calc(100% - var(--g)) calc(100% - var(--g));
   --_p: calc(var(--g) / 2);
   --_i: 0s;
@@ -51,13 +57,12 @@ img:hover {
 .Explore-button {
   background-color: aliceblue;
   color: #ffac1e;
-  padding: 5px 10px;
+  padding: 8px 15px;
   border-radius: 10px;
-  border: 1px solid #101010 ;
+  border: 1px solid #101010;
   margin-top: 20px;
-
 }
-.Explore-button:hover{
-    background-color: #ffac1e;
-    color: #101010;
+.Explore-button:hover {
+  background-color: #ffac1e;
+  color: #101010;
 }
