--- a/src/SpecialMenu/SpecialMenu.css
+++ b/src/SpecialMenu/SpecialMenu.css
@@ -1,16 +1,17 @@
 .munu-image img {
-  height: 400px;
+  width: 100%;
+  height: 800px ;
 }
 .heading {
   text-align: center;
-  margin: 100px 0px 60px 0px;
+  margin: 100px 0px 40px 0px;
 }
 
 .menu-dash {
-  width: 120px;
+  width: 90px;
   height: 1px;
   background-color: #ffad1f;
-  margin: 0px 20px 0px 20px;
+  margin: 0px 20px 0px 80px;
 }
 
 .wine-menu {
@@ -22,9 +23,9 @@
 .menu-wine-name {
   flex: 1;
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  text-align: right;
+  justify-content: flex-start;
+  align-items: flex-start;
+  text-align: left;
   color: #ffad1f;
 }
 .menu-items {
@@ -36,6 +37,9 @@
   flex-direction: column;
 
   text-align: center;
+  font-size: 20px;
+  margin: 0px;
+  font-weight: 250;
 }
 
 .menu-title {
@@ -45,4 +49,14 @@
   margin-bottom: 20px;
   color: aliceblue;
   font-family: "Cormorant Upright", serif;
+}
+.menu-desc {
+  text-align: left;
+  font-size: 16px;
+  line-height: 0px;
+  color: darkgray;
+  margin-bottom: 32px;
+}
+.special-menu{
+    margin: 60px ;
 }
